--- a/src/scss/D-layout/_containers.scss
+++ b/src/scss/D-layout/_containers.scss
@@ -5,7 +5,7 @@
   width: 100%;
   // max-width: f.rem(1200);
   margin-inline: auto;
-  padding-block: f.rem(60);
+  padding: f.rem(16);
   transition: max-width 0.4s cubic-bezier(0.4, 0, 0.2, 1);
 
   // Add horizontal padding for small screens
